@@ -1,3 +1,8 @@
+2002-02-5  Sam Steingold  <sds@gnu.org>
+
+	* foreign1.lisp, affi1.lisp: moved *FOREIGN-ENCODING* to the
+	CUSTOM package, as described in the impnotes
+
 2002-02-09  Sam Steingold  <sds@gnu.org>
 
 	* makemake.in: include impnotes.css in the distribution along
